<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.SignUpFragment"
    android:theme="@style/AppTheme.NoActionBar"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/signupTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_text_title"
            android:textAlignment="center"
            android:textSize="32sp" />

        <EditText
            android:id="@+id/signupEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/signup_input_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/signupPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/signup_input_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/signupConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/signup_input_confirm_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/signupName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/signup_input_name"
            android:inputType="text" />

        <Spinner
            android:id="@+id/signupSpinner"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:spinnerMode="dialog"
            />

        <Button
            android:id="@+id/signupBtnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_red_light"
            android:text="@string/signup_btn_register"
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp"/>



        <TextView
            android:id="@+id/signinRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="5dp"
            android:text="@string/signup_text_register" />

        <Button
            android:id="@+id/signupBtnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/signup_btn_login"
            android:textColor="@android:color/white" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>