<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.app.HomeFragment"
    android:id="@+id/homeFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_home"
    android:orientation="vertical"

    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        >

        <FrameLayout
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_home_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </FrameLayout>


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="64dp"

            android:layout_marginTop="32dp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="16dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_isologotipo"
            app:layout_constraintBottom_toTopOf="@+id/homeTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view"
            android:contentDescription="@string/home_image_logo_description"
            />


        <TextView
            android:id="@+id/homeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/home_text_title"
            android:textAlignment="textStart"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:typeface="normal"
            app:layout_constraintBottom_toTopOf="@+id/homeDescription"
            android:paddingHorizontal="24dp"
            />

        <TextView
            android:id="@+id/homeDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_thin"
            android:paddingHorizontal="24dp"
            android:text="@string/home_text_description"
            android:textAlignment="textStart"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:typeface="normal"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />




    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        app:columnCount="2"
        app:rowCount="2"
    android:alpha="0.9"
        >


            <LinearLayout
                android:id="@+id/buttonServices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/bg_home_button"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_rowWeight="1"
                android:gravity="center"
                android:orientation="vertical"

                >

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_services"
                    android:tint="@color/white"
                    android:contentDescription="@string/home_image_icon_services_description"
                    android:alpha="0.7"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_text_icon_services"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:alpha="0.7"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/buttonPlaces"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/bg_home_button"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_rowWeight="1"
                android:gravity="center"
                android:orientation="vertical"
                >

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_places"
                    android:tint="@color/white"
                    android:contentDescription="@string/home_image_icon_places_description"
                    android:alpha="0.7"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_text_icon_places"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:alpha="0.7"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/buttonTips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/bg_home_button"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_rowWeight="1"
                android:gravity="center"
                android:orientation="vertical"
                >

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_tips"
                    android:tint="@color/white"
                    android:contentDescription="@string/home_image_icon_tips_description"
                    android:alpha="0.7"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_text_icon_tips"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:alpha="0.7"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/buttonLinks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/bg_home_button"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_rowWeight="1"
                android:gravity="center"
                android:orientation="vertical"
                >

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_info_links"
                    android:tint="@color/white"
                    android:contentDescription="@string/home_image_icon_links_description"
                    android:alpha="0.7"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_text_icon_links"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:alpha="0.7"
                    />

            </LinearLayout>

    </androidx.gridlayout.widget.GridLayout>

</LinearLayout>



